# certimask

./: .gitignore  README.md  pyproject.toml
docs/: AGLR_C_V2_DESIGN.md  API_PATHS.md  BENCHMARK_SEMANTICS.md  RESEARCH_STATUS.md  ROADMAP.md
experiments/: benchmark_aglr_crossover.py  benchmark_aglr_quantization_and_baseline.py  benchmark_aglr_triton.py  benchmark_aglr_triton_profile.py  benchmark_topk_mask.py  run_aglr_certimask_group_scan.py  run_aglr_full_layer_policy_scan.py  run_aglr_indexer_diagnostics.py  run_aglr_layerwise_policy_scan.py  run_aglr_quality_work_frontier.py  run_attention_quality.py  run_synthetic_threshold.py
tests/: test_aglr_antidiagonal.py  test_aglr_certimask.py  test_aglr_certimask_group_scan.py  test_aglr_certimask_work_summary.py  test_aglr_full_layer_policy.py  test_aglr_indexer.py  test_aglr_policy_selection.py  test_aglr_quality_work_frontier.py  test_api_path_annotations.py  test_attention_quality.py  test_benchmark_semantics.py  test_block_summary.py  test_candidate_pruning.py  test_crossover_benchmark_utils.py  test_diagnostics.py  test_experiment_entrypoints.py  test_gqa_mapping.py  test_group_quantization.py  test_groupwise_coordinate.py  test_hf_extraction.py  test_konly_policy.py  test_layer_policy.py  test_local_hybrid_masks.py  test_masking.py  test_metrics.py  test_oracle_mask_diagnostics.py  test_quant_strategy.py  test_quantization.py  test_quantization_benchmark_utils.py  test_score_bounds.py  test_scoring.py  test_synthetic.py  test_topk_certificate.py  test_triton_aglr_certimask.py  test_triton_profile_metrics.py  (+2 more)
(+207 files in other folders)
